create png file

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -32,7 +32,7 @@
 }
 
 .bg-header {
-  background: url('https://rwood.png');
+  background: url('https://images6.alphacoders.com/339/339517.jpg');
 }
 
 .card-holder img {
@@ -175,12 +175,6 @@
 .h-100vh {
   min-height: 100vh;
 }
-
-/* --------------------------------------------------------------------------------------------------------  
-* 
-*                                                ANIMATIONS
-* 
-* -------------------------------------------------------------------------------------------------------- */
 
 /* Vertical shake */
 
