--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -32,7 +32,7 @@
 }
 
 .bg-header {
-  background: url('http://media.giphy.com/media/172b3L012imYM/giphy.gif');
+  background: url('https://cdnb.artstation.com/p/assets/images/images/005/568/311/large/michael-tran-render-london-hospital-07.jpg?1492040395');
 }
 
 .card-holder img {
@@ -66,7 +66,7 @@
 }
 
 .neon {
-  font-family: 'Dawning of a New Day', Helvetica, Arial, sans-serif;
+  font-family:'Courier New', Courier, monospace;
   color: #fff;
   text-shadow: 0 0 5px #fff, 0 0 10px rgb(255, 204, 204), 0 0 20px yellow, 0 0 30px #d7fd00, 0 0 40px #a3c722, 0 0 55px #aeac31, 0 0 75px #fdb500;
   text-align: center;
@@ -119,7 +119,7 @@
 .nav-font {
   /* font-size: 2rem; */
   font-size: 2vw;
-  /* font-size: calc(25px + (100 - 14) * ((40vw - 300px) / (1600 - 300))); */
+  /* font-size: calc(25px + (100) * ((40vw - 300px) / (1600 - 300))); */
 }
 
 .nav-font a {
